# BTL-IOT

./: PLAN_OTA_TINYML.md  README.md  REPORT_OTA_WEB.md  platformio.ini
.pio/libdeps/yolo_uno/ESPAsyncTCP/: .piopm
.pio/libdeps/yolo_uno/ESPAsyncWebServer/: .piopm  README.md  library.json  library.properties
.pio/libdeps/yolo_uno/ESPAsyncWebServer/examples/arduino_emulator/: CMakeLists.txt  main.cpp
.pio/libdeps/yolo_uno/ESPAsyncWebServer/src/: AsyncEventSource.cpp  AsyncEventSource.h  AsyncJson.h  AsyncWebServerLogging.h  AsyncWebServerVersion.h  AsyncWebSocket.cpp  AsyncWebSocket.h  ESPAsyncWebServer.h  WebAuthentication.cpp  WebHandlers.cpp  WebRequest.cpp  WebResponseImpl.h  (+2 more)
.pio/libdeps/yolo_uno/RPAsyncTCP/: .piopm  CONTRIBUTING.md  README.md  changelog.md  library.json  library.properties  platformio.ini
artifacts/retrain/: dht_anomaly_model.h  job_status.json  metrics.json  normalized.csv  tinyml_model.keras
artifacts/retrain/dataset/: test.csv  train.csv  val.csv
data/: index.html  script.js  styles.css
include/: coreiot.h  global.h  led_blinky.h  neo_blinky.h  task_check_info.h  task_core_iot.h  task_handler.h  task_webserver.h  task_wifi.h  temp_humi_monitor.h  tinyml.h
src/: coreiot.cpp  global.cpp  led_blinky.cpp  main.cpp  mainserver.cpp  neo_blinky.cpp  task_check_info.cpp  task_core_iot.cpp  task_handler.cpp  task_rs485.cpp  task_webserver.cpp  task_wifi.cpp  temp_humi_monitor.cpp  tinyml.cpp
tools/: evaluate_model.py  export_data.py  export_model.py  prepare_dataset.py  requirements.txt  retrain_server.py  run_retrain.py  train_model.py
(+30 files in other folders)
